--- a/src/components/Profile/index.css
+++ b/src/components/Profile/index.css
@@ -1,44 +1,132 @@
-.user-page {
-  display: grid;
-  grid-template-columns: auto auto;
-  width: 100%;
-}
+  .user-page {
+    display: grid;
+    grid-template-columns: 250px auto;
+      gap: 20px;
+    width: 100%;
+  }
 
-.user-sidebar {
-  height: 100vh;
-  width: 250px;
-}
+  .user-sidebar {
+    height: 100vh;
+    width: 250px;
+    border: 1px solid none;
+      border-radius: 20px;
+  }
 
-.user-sidebar ul {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 20px;
-}
+  .user-sidebar ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px;
+  }
 
-.user-sidebar ul hr {
-  border-color: rgb(132, 132, 132);
-  width: 200px;
-}
+  .user-sidebar ul hr {
+    border-color: rgb(132, 132, 132);
+    width: 200px;
+  }
 
-.user-sidebar ul span {
-  font-size: 20px
-}
+  .user-sidebar ul span {
+    font-size: 20px
+  }
 
-.user-sidebar .selected-item {
-  background-color: white;
-  width: 28px;
-  height: 25px;
-  margin-right: -30px;
-  border-radius: 50% 0 0 50%;
-}
+  .user-sidebar .selected-item {
+    background-color: white;
+    width: 28px;
+    height: 25px;
+    margin-right: -30px;
+    border-radius: 50% 0 0 50%;
+  }
 
-.user-profile-page {
-  display: flex;
-  width: 100%;
-}
+  .user-profile-page {
+    display: flex;
+    flex-direction: column;
+      margin: 2% 4%;
+  }
 
-.user-profile-header {
+  .user-profile-header {
   display: flex;
   justify-content: space-between;
-}
+  padding: 20px 0;
+  }
+  
+  .user-profile-header>#profile {
+    font-size: 30px;
+    font-weight: 500;
+  }
+  
+  .user-profile-header>#user {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 18px;
+  }
+  
+  .user-profile-body {
+    display: grid;
+    grid-template-columns: 48% 4% 48%;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 10px;
+  }
+
+  .user-profile-body>div {
+    margin-top: 10px;
+  }
+
+  .user-profile-body > #personal-details{
+    display: flex;
+    margin: auto;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+    align-items: center;
+  }
+  .user-profile-body #bold-details{
+    font-size:20px;
+    font-weight:500;
+  }
+
+  .user-profile-body p{
+    font-size: 20px;
+    color: gray;
+  }
+  .user-profile-body #personal-details #user-data{
+    display: grid;
+    grid-template-columns: auto auto;
+    text-align: center;
+    margin: auto;
+    justify-content: center;
+    gap: 10px;
+  }
+  #user-data > p{
+  text-align: right;
+  }
+  #user-data > #bold-details{
+    text-align:left
+  }
+ 
+  .user-address{
+    padding:20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+  }
+  .user-address #personal-details{
+    margin:30px 50px;
+  }
+  .map-coordinates {
+    margin-top: 5px;
+    display: flex;
+    gap:10px;
+    justify-content: flex-end;
+  }
+  .map-coordinates #coordinates {
+    display: flex;
+    align-items: center;
+  }
+  .map-footer{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
